# lab-05-stack

./: CMakeLists.txt  README.md
include/: Stack1.h  Stack2.h
sources/: main.cpp
